# zmake

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  MoeProject.lua  README.md  xmake.lua
core/: config.hpp.in  engine.cppm  xmake.lua  zmake.cppm
core/qucikjs/: qucikjs.cppm
core/v8/: v8.cppm
ecmascriptinterface/: Cargo.toml
ecmascriptinterface/src/: error.rs  lib.rs  module.rs  transformer.rs  v8.rs
estd/: Cargo.toml  readme.md  tsconfig.json
estd/declarations/: estd.compress.d.ts  estd.d.ts  estd.fs.d.ts  estd.global.d.ts
estd/src/: compress.rs  estd.compress.ts  estd.fs.ts  fs.rs  lib.rs  net.rs
standardecmascript_deno/: Cargo.toml
standardecmascript_deno/src/: lib.rs
zmake/: Cargo.toml  main.cpp  xmake.lua
zmake/src/: main.rs
zmake_lib/: Cargo.toml
zmake_lib/src/: built-in.js  config.rs  engine.rs  error.rs  finder.rs  lib.rs  loader.rs  module.rs  modules.rs  options.rs  swc.json  transformer.rs  zmake.configuration.d.ts
