[package]
name = "zmake_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
quickjs_runtime = {git="https://github.com/HiRoFa/quickjs_es_runtime", features=["quickjs-ng"], default-features=false}
swc_common = { version = "5.0.0",features=["tty-emitter"] }
swc = "9.0.1"
serde = "1.0.217"
serde_json = "1.0.127"
log = "0.4.22"
thiserror = "2.0.9"
url = "2.5.2"
priority-queue = "2.1.1"
